--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@ai-sdk/google": "^2.0.14",
     "@ai-sdk/react": "^2.0.45",
+    "@google/generative-ai": "^0.24.1",
     "@hookform/resolvers": "^5.2.2",
+    "@pinecone-database/pinecone": "^6.1.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -43,13 +45,16 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "docx-parser": "^0.2.1",
     "embla-carousel-react": "^8.6.0",
     "googleapis": "^160.0.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.544.0",
+    "mammoth": "^1.11.0",
     "mysql2": "^3.15.0",
     "next": "15.5.3",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^1.1.1",
     "react": "19.1.0",
     "react-day-picker": "^9.10.0",
     "react-dom": "19.1.0",
@@ -68,6 +73,7 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
